KAS-1570: added new icon + fixed alignment

--- a/app/styles/_icon-font.css
+++ b/app/styles/_icon-font.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "kaleidos-icons";
-    src: url("/fonts/kaleidos-icons.eot?0887028b08cd2cec7c89a0344237e035?#iefix") format("embedded-opentype"),
-url("/fonts/kaleidos-icons.woff2?0887028b08cd2cec7c89a0344237e035") format("woff2"),
-url("/fonts/kaleidos-icons.woff?0887028b08cd2cec7c89a0344237e035") format("woff"),
-url("/fonts/kaleidos-icons.ttf?0887028b08cd2cec7c89a0344237e035") format("truetype"),
-url("/fonts/kaleidos-icons.svg?0887028b08cd2cec7c89a0344237e035#kaleidos-icons") format("svg");
+    src: url("/fonts/kaleidos-icons.eot?2a4b535190d5b602c3b9924358ebcb48?#iefix") format("embedded-opentype"),
+url("/fonts/kaleidos-icons.woff2?2a4b535190d5b602c3b9924358ebcb48") format("woff2"),
+url("/fonts/kaleidos-icons.woff?2a4b535190d5b602c3b9924358ebcb48") format("woff"),
+url("/fonts/kaleidos-icons.ttf?2a4b535190d5b602c3b9924358ebcb48") format("truetype"),
+url("/fonts/kaleidos-icons.svg?2a4b535190d5b602c3b9924358ebcb48#kaleidos-icons") format("svg");
 }
 
 i[class^="ki-"]:before, i[class*=" ki-"]:before {
@@ -30,39 +30,45 @@ i[class^="ki-"]:before, i[class*=" ki-"]:before {
 .ki-document:before {
     content: "\f104";
 }
-.ki-hierarchical-back:before {
+.ki-hide:before {
     content: "\f105";
 }
-.ki-info-circle:before {
+.ki-hierarchical-back:before {
     content: "\f106";
 }
-.ki-nav-down:before {
+.ki-info-circle:before {
     content: "\f107";
 }
-.ki-nav-left:before {
+.ki-lock-closed:before {
     content: "\f108";
 }
-.ki-nav-right:before {
+.ki-nav-down:before {
     content: "\f109";
 }
-.ki-nav-up:before {
+.ki-nav-left:before {
     content: "\f10a";
 }
-.ki-pencil:before {
+.ki-nav-right:before {
     content: "\f10b";
 }
-.ki-question-mark:before {
+.ki-nav-up:before {
     content: "\f10c";
 }
-.ki-redo:before {
+.ki-pencil:before {
     content: "\f10d";
 }
-.ki-search:before {
+.ki-question-mark:before {
     content: "\f10e";
 }
-.ki-sitemap:before {
+.ki-redo:before {
     content: "\f10f";
 }
-.ki-user:before {
+.ki-search:before {
     content: "\f110";
+}
+.ki-sitemap:before {
+    content: "\f111";
+}
+.ki-user:before {
+    content: "\f112";
 }
